feat: added POST /user/login endpoint
